# ROM-Library-Organizer

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: tests.yml
src/rom_library_organizer/: __main__.py  cli.py  renamer.py  scanner.py
tests/: conftest.py  test_platform_batocera.py  test_platform_knulli.py  test_platform_nextui.py  test_platform_romm.py  test_renamer.py  test_scanner.py
