[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rom-library-organizer"
version = "0.1.0"
description = "Tool to organize ROM collections"
authors = [{name = "ROM Organizer", email = "example@example.com"}]
readme = "README.md"
license = {file = "LICENSE"}
dependencies = []

[project.urls]
Homepage = "https://example.com"

[project.scripts]
rom-library-organizer = "rom_library_organizer.__main__:main"
